# data_analyst_nano_degree

./: README.md
project_1_explore_weather_trends/: README.md  explore_weather_trends.py  pyproject.toml
project_1_explore_weather_trends/sql/: dallas_weather_trends.sql  global_weather_trends.sql
