[tool.poetry]
name = "project_1_explore_weather_trends"
version = "0.1.0"
description = ""
authors = ["Larry Johnson <johnson.larry.l@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
